# build-my-agent

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
claude_history/: 2026-03-28-align-templates-with-deepagents-api.md  2026-03-28-code-review-fixes.md  2026-03-28-e2e-render-tests.md  2026-03-28-fix-conftest-ruff-clean.md  2026-03-28-guard-ruff-integration.md  2026-03-28-lint-scope-impl.md  2026-03-28-lint-scope-tests.md  2026-03-28-ruff-and-skills.md  2026-03-28-skill-update-http-tool.md  2026-03-29-e2e-url-shortener.md  2026-03-29-guard-expansion-readme.md  2026-03-29-guard-required-files.md  2026-03-29-pytest-collection-scope-design.md  2026-03-29-pytest-collection-scope-impl.md  2026-03-29-readme-update.md  2026-03-29-render-guard-reference-design.md  2026-03-29-render-metadata-shared-support.md
guard/: __init__.py  __main__.py  checker.py  cli.py  rules.yaml
scripts/: render_agent.py  render_support.py
skills/00-create-ops-agent/: SKILL.md
skills/01-analyze-codebase/: SKILL.md
skills/02-design-agent/: SKILL.md
skills/03-generate-agent/: SKILL.md
skills/04-validate-structure/: SKILL.md
templates/: agent.py.tmpl  models.py.tmpl  pyproject.toml.tmpl
templates/config/: agent.yaml.tmpl
templates/prompts/: system.md.tmpl
templates/tests/: test_agent.py.tmpl  test_tools.py.tmpl
tests/: conftest.py  test_checker.py  test_cli.py  test_e2e_render.py  test_pytest_collection.py  test_reference_tools.py
tools/: __init__.py  http_client.py  opensearch.py  prometheus.py
(+22 files in other folders)
